trino-coordinator-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: trino-coordinator
  name: trino-coordinator
spec:
  type: LoadBalancer
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: trino-coordinator
status:
  loadBalancer: {}
